--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -1,15 +1,17 @@
 {
   "manifest_version": 3,
   "name": "Exposition Email Automator",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Extracts data and images from Gmail for exposition purposes.",
   "permissions": [
     "storage",
     "activeTab",
-    "scripting"
+    "scripting",
+    "clipboardWrite"
   ],
   "host_permissions": [
-    "https://mail.google.com/"
+    "https://mail.google.com/",
+    "https://face-recognise.vercel.app/"
   ],
   "action": {
     "default_popup": "popup.html",
@@ -26,11 +28,15 @@
     {
       "matches": ["https://mail.google.com/*"],
       "js": ["content.js"]
+    },
+    {
+      "matches": ["https://face-recognise.vercel.app/*"],
+      "js": ["autofill.js"]
     }
   ],
   "web_accessible_resources": [
     {
-      "resources": ["lib/face-api.min.js"],
+      "resources": ["lib/face-api.min.js", "models/*"],
       "matches": ["<all_urls>"]
     }
   ]
